experemental with png

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <h2>Recommended products</h2>
     <ul>
       <li class="box_1">
-        <img src="../img/ product(1).jpg" alt="Товар 1">
+        <img src="img/ product(1).png" alt="Товар 1">
         <h3>Die Hemden</h3>
         <p>Ein elegantes und bequemes Baumwollhemd aus unserem Markenbekleidungsgeschäft ist die perfekte Wahl für einen klassischen und modernen Stil zu jeder Zeit des Jahres.</p>
       </li>
       <li class="box_2">
-        <img src="../img/ product(2).jpg" alt="Товар 2">
+        <img src="img/ product(2).png" alt="Товар 2">
         <h3>Die Kleidung</h3>
         <p>Unser Markenbekleidungsgeschäft bietet stilvolle und hochwertige Kleidung, mit der Sie sich in jeder Situation wohl und sicher fühlen.</p>
       </li>
       <li class="box_3">
-        <img src="../img/ product(3).jpg" alt="Товар 3">
+        <img src="img/ product(3).png" alt="Товар 3">
         <h3>Neue Mäntel</h3>
         <p>Unser Markenbekleidungsgeschäft bietet Ihnen einen hochwertigen und stilvollen Regenmantel, der Sie vor Regen schützt und Ihrem Look zusätzliche Eleganz verleiht.</p>
       </li>
