--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Ein elegantes und bequemes Baumwollhemd aus unserem Markenbekleidungsgeschäft ist die perfekte Wahl für einen klassischen und modernen Stil zu jeder Zeit des Jahres.</p>
       </li>
       <li class="box_2">
-        <img src="img/ product(2).png" alt="Товар 2">
+        <img src="img/_product(2).jpg" alt="Товар 2">
         <h3>Die Kleidung</h3>
         <p>Unser Markenbekleidungsgeschäft bietet stilvolle und hochwertige Kleidung, mit der Sie sich in jeder Situation wohl und sicher fühlen.</p>
       </li>
